--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+  <div id="container"></div>
     <div id="textbox"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.js"
