--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-  <div id="container"></div>
+  <div id="container">
+   <div id="back"></div>
+  </div>
     <div id="textbox"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.js"
